# vehicle-classification

./: .gitignore  LiDARCarDataset.py  README.md  utils.py
color3Dnet/: LiDARCarDataset.py  color3Dnet.py  requirements.txt  utils.py
ios_app/CarScanner/: Info.plist  importViewController.swift
ios_app/CarScanner.xcodeproj/: project.pbxproj
ios_app/CarScanner.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
ios_app/CarScanner.xcodeproj/project.xcworkspace/xcuserdata/Christian.Edelmayer.xcuserdatad/: .UserInterfaceState.xcuserstate.swp  UserInterfaceState.xcuserstate  UserInterfaceState_BACKUP_12988.xcuserstate  UserInterfaceState_BASE_12988.xcuserstate  UserInterfaceState_LOCAL_12988.xcuserstate  UserInterfaceState_REMOTE_12988.xcuserstate
ios_app/CarScanner.xcodeproj/project.xcworkspace/xcuserdata/chris.xcuserdatad/: UserInterfaceState.xcuserstate
ios_app/CarScanner.xcodeproj/xcshareddata/xcschemes/: CarScanner.xcscheme  SceneDepthPointCloud.xcscheme
ios_app/CarScanner.xcodeproj/xcuserdata/Christian.Edelmayer.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ios_app/CarScanner/Controllers/: PreviewViewController.swift  ScanViewController.swift  SettingsViewController.swift
ios_app/CarScanner/Models/: Helpers.swift  Parser.swift  Point.swift  ShaderTypes.h
ios_app/CarScanner/Resources/: AppDelegate.swift  MetalBuffer.swift  Scanner.swift  Shaders.metal
ios_app/CarScanner/Views/Storyboards/Base.lproj/: LaunchScreen.storyboard  (+1 more)
preprocessing_and_data_augmentation/: CMakeLists.txt  README.md  main.cpp  pcl_vis_c_setup.sh
(+1 files in other folders)
